--- a/public/css/main.css
+++ b/public/css/main.css
@@ -259,7 +259,7 @@ a{
         float: left;
         width: 100%;
         margin-bottom: 15px;
-        background-color: gray;
+        background-color:lightgrey;
         border-radius: 15px;
         
  
