--- a/views/acercaDNosotros.ejs
+++ b/views/acercaDNosotros.ejs
@@ -5,15 +5,21 @@
 
 <div class="nosotros">
     <div class="mvi">
+        <div class="quienesSomos">
+            <h3>¿Quiénes somos?</h3>
+            <p>
+                <strong>PhpForDevs</strong>, es una página creada por estudiantes de la Facultad de <strong>Ingeniería de Sistemas Informáticos</strong> de la <strong>Universidad de El Salvador</strong>, con la intención principal de brindar conocimiento y ayuda a usuarios en la web interesados en el lenguaje de programación PHP.
+            </p>
+        </div>
         <div class="mision">
             <h3>Misión</h3>
-            <p>Desarrollar un sitio web como herramienta para el aprendizaje del lenguaje de programación PHP que funcione como guía didáctica para programadores intermedios y avanzados.
+            <p>Desarrollar un sitio web como herramienta para el aprendizaje del lenguaje de programación <strong>PHP</strong> que funcione como guía didáctica para programadores intermedios y avanzados.
             </p>
         </div>
         <div class="vision">
             <h3>Visión</h3>
             <p>
-                Posicionarse como líderes en dar solución de manera precisa y delimitada a los problemas de aprendizaje del lenguaje de programación PHP para programadores intermedios o avanzados. 
+                Posicionarse como líderes en dar solución de manera precisa y delimitada a los problemas de aprendizaje del lenguaje de programación <strong>PHP</strong> para programadores intermedios o avanzados. 
             </p>
         </div>
         <div class="integrantes">
