--- a/views/thread.ejs
+++ b/views/thread.ejs
@@ -1,29 +1,37 @@
 <%- include("templates/head",{ruta:'/css/foro.css',title:'Titulo Foro'}) %>
 
     <div class="top-bar">
-        <h1>Capturar el titulo del foro</h1>            
+        <h1>
+            <%= foro[0].titforo%>
+        </h1>
+        <p>
+            <%= foro[0].descripcion%>
+        </p>
     </div>
 
     <div class="maincomment">
         <div class="comments">
             <form method="post" class="formcomment">
-               <label>Autor:</label><input type="text" placeholder="Autor" id="author" name="author" class="formatinput">        
-               <label>Comentario:</label><input type="text" placeholder="Comentario" id="comment" name="comment" class="formatinput">
+                <label>Autor:</label><input type="text" placeholder="Autor" id="author" name="author"
+                    class="formatinput">
+                <label>Comentario:</label><input type="text" placeholder="Comentario" id="comment" name="comment"
+                    class="formatinput">
                 <button type="submit" class="btnComment">Comentar</button>
-             </form>
+            </form>
         </div>
     </div>
 
 
     <% for(let i=0; i<data.length;i++){ %>
         <div class="seccioncomentarios">
-        <div class="mensajes">
-            <div class="contentmessage">Autor: <%= data[i].usuario_res%> <br></div> 
-            <div class="contentmessage">Respuesta: <%= data[i].descripcion_res%><br></div>
-            <div class="contentmessage">Me gusta: <%= data[i].ayuda%> No me gusta: <%= data[i].noayuda%></div>
+            <div class="mensajes">
+                <div class="contentmessage">Autor: <%= data[i].usuario_res%> <br></div>
+                <div class="contentmessage">Respuesta: <%= data[i].descripcion_res%><br></div>
+                <div class="contentmessage">Me gusta: <%= data[i].ayuda%> No me gusta: <%= data[i].noayuda%>
+                </div>
+            </div>
+
         </div>
+        <% } %>
 
-    </div>
-    <% } %>
-
-<%- include("templates/footer") %>
+            <%- include("templates/footer") %>
